--- a/src/home/templates/pages/general/footer.html
+++ b/src/home/templates/pages/general/footer.html
@@ -3,12 +3,12 @@
     <div class="inner">
         <ul class="icons">
             <li>
-                <a href="#" class="icon brands alt fa-twitter">
+                <a href="" class="icon brands alt fa-twitter">
                 <span class="label">Twitter</span>
                 </a>
             </li>
             <li>
-                <a href="#" class="icon brands alt fa-linkedin-in">
+                <a href="" class="icon brands alt fa-linkedin-in">
                     <span class="label">LinkedIn</span>
                 </a>
             </li>
