--- a/src/home/templates/pages/general/logos_section.html
+++ b/src/home/templates/pages/general/logos_section.html
@@ -1,8 +1,8 @@
 {% load static %}
-<section class="bg-white dark:interval-green-dark">
+<section class="bg-white dark:bg-interval-green-dark">
     <div class="pb-24 px-6 grid grid-cols-1 gap-8 sm:gap-12 md:grid-cols-3">
-        <img class="max-h-16 w-full mt-12 object-contain md:col-span-1" src="https://logodix.com/logo/771750.png" alt="UCD">
+        <img class="max-h-20 w-full mt-12 object-contain md:col-span-1" src="https://logodix.com/logo/771750.png" alt="UCD">
         <img class="max-h-32 w-full object-contain md:col-span-1 align-center text-center" src="{% static 'logos/INTERVAL_logo_v2_white.png' %}" alt="INTERVAL">
-        <img class="max-h-16 w-full mt-10 object-contain md:col-span-1" src="https://www.sfi.ie/site-files/cms-templates/img/sfi-logo.svg" alt="SFI">
+        <img class="max-h-20 w-full mt-10 object-contain md:col-span-1" src="https://www.sfi.ie/site-files/cms-templates/img/sfi-logo.svg" alt="SFI">
     </div>
 </section>
