--- a/src/blog/templates/blog/blog_index_page.html
+++ b/src/blog/templates/blog/blog_index_page.html
@@ -1,15 +1,55 @@
 {% extends "base.html" %}
-{% load wagtailcore_tags %}
+{% load static %}
+<!-- Load the wagtailimages_tags: -->
+{% load wagtailcore_tags wagtailimages_tags %}
 {% block body_class %}template-blogindexpage{% endblock %}
+{% block extra_css %}
+{#<link rel="stylesheet" href="{% static 'css/welcome_page.css' %}">#}
+{% include 'home/css.html' %}
+{% endblock extra_css %}
 {% block content %}
-    <h1>{{ page.title }}</h1>
+<!-- Wrapper -->
+<div id="wrapper">
+<!-- Header -->
+	{% include 'pages/general/navbar.html' %}
+	<!-- Menu -->
+	{% include 'pages/general/menu.html' %}
+    <!-- Main -->
+    <div id="main" class="alt">
+        <!-- One -->
+        <section id="one">
+            <div class="inner">
+                <header class="major">
+                    <h1>{{ page.title }}</h1>
+                </header>
+                <p class="intro">
+                    {{ page.intro|richtext }}
+                </p>
+                <div class="table-wrapper">
+                    <table>
+                        <tbody>
+                        {% for post in page.get_children %}
+                        {% with post=post.specific %}
+                            <tr>
+                                <td>{{ post.date }}</td>
+                                <td>
+                                    <a href="{% pageurl post %}">{{ post.title }}</a>
+                                </td>
+                            </tr>
+                        {% endwith %}
+                        {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
 
-    <div class="intro">{{ page.intro|richtext }}</div>
-
-    {% for post in page.get_children %}
-        <h2><a href="{% pageurl post %}">{{ post.title }}</a></h2>
-        {{ post.specific.intro }}
-        {{ post.specific.body|richtext }}
-    {% endfor %}
-
-{% endblock %}
+            </div>
+        </section>
+    </div>
+	<!-- Contact -->
+	{% include 'pages/general/contact.html' %}
+	<!-- Footer -->
+	{% include 'pages/general/footer.html' %}
+</div>
+<!-- Scripts -->
+{% include 'home/js.html' %}
+{% endblock content %}
