--- a/src/home/static/css/main.css
+++ b/src/home/static/css/main.css
@@ -99,7 +99,7 @@ input, select, textarea {
 	}
 
 	body {
-		background-image: linear-gradient(to left top, #2d3320, #434c2c, #5b6638, #748243, #909e4f);
+		background: #2d3320;
 		color: #ffffff;
 	}
 
@@ -198,27 +198,28 @@ input, select, textarea {
 		}
 
 	h1 {
-		font-size: 2.5em;
+		font-size: 3rem;
+
 	}
 
 	h2 {
-		font-size: 1.75em;
+		font-size: 2.25rem;
 	}
 
 	h3 {
-		font-size: 1.35em;
+		font-size: 1.875rem;
 	}
 
 	h4 {
-		font-size: 1.1em;
+		font-size: 1.5rem;
 	}
 
 	h5 {
-		font-size: 0.9em;
+		font-size: 1.1rem;
 	}
 
 	h6 {
-		font-size: 0.7em;
+		font-size: 0.9rem;
 	}
 
 	@media screen and (max-width: 736px) {
@@ -2518,11 +2519,11 @@ input, select, textarea {
 		-webkit-transition: background-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out, color 0.2s ease-in-out;
 		-ms-transition: background-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out, color 0.2s ease-in-out;
 		transition: background-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out, color 0.2s ease-in-out;
-		background-color: #909E4F;
+		background-color: transparent;
 		border: 0;
 		border-radius: 0;
-		/*box-shadow: inset 0 0 0 2px #ffffff;*/
-		color: #ffffff;
+		box-shadow: inset 0 0 0 2px #2D3320;
+		color: #2D3320;
 		cursor: pointer;
 		display: inline-block;
 		font-size: 0.8em;
@@ -2547,8 +2548,8 @@ input, select, textarea {
 		.button:hover,
 		.button:active {
 			background-color: #ffffff;
-			box-shadow: inset 0 0 0 2px #2D3320;
-			color: #2D3320 !important;
+			box-shadow: inset 0 0 0 2px #909E4F;
+			color: #909E4F !important;
 		}
 
 		input[type="submit"]:active,
@@ -2556,9 +2557,9 @@ input, select, textarea {
 		input[type="button"]:active,
 		button:active,
 		.button:active {
-			background-color: rgba(155, 241, 255, 0.1);
+			background-color: #909E4F;
 			box-shadow: inset 0 0 0 2px #2D3320;
-			color: #2D3320;
+			color: #909E4F;
 		}
 
 		input[type="submit"].icon:before,
@@ -2635,7 +2636,7 @@ input, select, textarea {
 			input[type="button"].next:before,
 			button.next:before,
 			.button.next:before {
-				background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='36px' height='24px' viewBox='0 0 36 24' zoomAndPan='disable'%3E%3Cstyle%3Eline %7B stroke: %23ffffff%3B stroke-width: 2px%3B %7D%3C/style%3E%3Cline x1='0' y1='12' x2='34' y2='12' /%3E%3Cline x1='25' y1='4' x2='34' y2='12.5' /%3E%3Cline x1='25' y1='20' x2='34' y2='11.5' /%3E%3C/svg%3E");
+				background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='36px' height='24px' viewBox='0 0 36 24' zoomAndPan='disable'%3E%3Cstyle%3Eline %7B stroke: %232D3320%3B stroke-width: 2px%3B %7D%3C/style%3E%3Cline x1='0' y1='12' x2='34' y2='12' /%3E%3Cline x1='25' y1='4' x2='34' y2='12.5' /%3E%3Cline x1='25' y1='20' x2='34' y2='11.5' /%3E%3C/svg%3E");
 			}
 
 			input[type="submit"].next:after,
@@ -2643,7 +2644,7 @@ input, select, textarea {
 			input[type="button"].next:after,
 			button.next:after,
 			.button.next:after {
-				background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='36px' height='24px' viewBox='0 0 36 24' zoomAndPan='disable'%3E%3Cstyle%3Eline %7B stroke: %2335503d%3B stroke-width: 2px%3B %7D%3C/style%3E%3Cline x1='0' y1='12' x2='34' y2='12' /%3E%3Cline x1='25' y1='4' x2='34' y2='12.5' /%3E%3Cline x1='25' y1='20' x2='34' y2='11.5' /%3E%3C/svg%3E");
+				background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='36px' height='24px' viewBox='0 0 36 24' zoomAndPan='disable'%3E%3Cstyle%3Eline %7B stroke: %23909E4F%3B stroke-width: 2px%3B %7D%3C/style%3E%3Cline x1='0' y1='12' x2='34' y2='12' /%3E%3Cline x1='25' y1='4' x2='34' y2='12.5' /%3E%3Cline x1='25' y1='20' x2='34' y2='11.5' /%3E%3C/svg%3E");
 				opacity: 0;
 				z-index: 1;
 			}
@@ -2677,7 +2678,7 @@ input, select, textarea {
 		input[type="button"].primary,
 		button.primary,
 		.button.primary {
-			background-color: #ffffff;
+			background-color: #909E4F;
 			box-shadow: none;
 			color: #2D3320;
 		}
@@ -2691,7 +2692,7 @@ input, select, textarea {
 			button.primary:active,
 			.button.primary:hover,
 			.button.primary:active {
-				background-color: #909E4F;
+				background-color: #2D3320;
 				color: #ffffff !important;
 			}
 
@@ -2700,7 +2701,7 @@ input, select, textarea {
 			input[type="button"].primary:active,
 			button.primary:active,
 			.button.primary:active {
-				background-color: #ffffff;
+				background-color: #2D3320;
 			}
 
 		input[type="submit"].disabled, input[type="submit"]:disabled,
@@ -3388,7 +3389,6 @@ input, select, textarea {
 		-webkit-align-items: center;
 		-ms-align-items: center;
 		align-items: center;
-		text-align: center;
 		background-image: url("/static/images/small-road-trees.jpg");
 		display: -moz-flex;
 		display: -webkit-flex;
