--- a/src/home/templates/pages/general/menu.html
+++ b/src/home/templates/pages/general/menu.html
@@ -3,15 +3,14 @@
         <li><a href="/">Home</a></li>
         <li><a href="/about/">About</a></li>
         <li><a href="/news/">News</a></li>
-        <li><a href="/team/">Team</a></li>
+{#        <li><a href="/team/">Team</a></li>#}
     </ul>
     <ul class="actions stacked">
-        <li>
-            <a href="" class="button fit small">Contact Us</a>
-        </li>
+{#        <li>#}
+{#            <a href="" class="button fit small">Contact Us</a>#}
+{#        </li>#}
          <li>
              <a href="/admin/" class="button fit small">Log In</a>
          </li>
-<!--<li><a href="#" class="button fit">Log In</a></li>-->
     </ul>
 </nav>
