--- a/src/home/static/css/main.css
+++ b/src/home/static/css/main.css
@@ -2772,8 +2772,16 @@ input, select, textarea {
 			}
 
 			.tiles article h3 {
-				font-size: 1.1em;
-				text-shadow: 2px 2px 4px rgba(45, 51, 32, 1);
+				font-size: 1.3em;
+				/*text-shadow: 2px 2px 4px rgba(45, 51, 32, 1);*/
+				text-shadow:
+					-1px -1px 0 #2D3320,
+					1px -1px 0 #2D3320,
+					-1px 1px 0 #2D3320,
+					1px 1px 0 #2D3320,
+					2px 2px 2px rgba(0, 0, 0, 0.5), /* Soft shadow for depth */
+					-2px -2px 2px rgba(0, 0, 0, 0.5) !important; /* Apply important here */
+
 			}
 				.tiles article h3 a:hover {
 					color: inherit !important;
@@ -2838,29 +2846,27 @@ input, select, textarea {
 			}
 
 			.tiles article:nth-child(6n - 5):before {
-				background-color: #909E4F;
+				/*background-color: #909E4F;*/
 			}
 
 			.tiles article:nth-child(6n - 4):before {
-				background-color: #3D4D00;
+				/*background-color: #3D4D00;*/
 			}
 
 			.tiles article:nth-child(6n - 3):before {
-				background-color: #6E673D;
+				/*background-color: #6E673D;*/
 			}
 
 			.tiles article:nth-child(6n - 2):before {
-				background-color: #C3AA36;
+				/*background-color: #C3AA36;*/
 			}
 
 			.tiles article:nth-child(6n - 1):before {
-				/*background-color: #553A41;*/
-				background-color: #C59B60;
+				/*background-color: #C59B60;*/
 			}
 
 			.tiles article:nth-child(6n):before {
-				/*background-color: #904E55;*/
-				background-color: #C8CE61;
+				/*background-color: #C8CE61;*/
 			}
 
 		@media screen and (max-width: 1280px) {
