Updates interval logos

--- a/src/home/templates/home/home_page.html
+++ b/src/home/templates/home/home_page.html
@@ -12,12 +12,13 @@
 			<header id="fh5co-header-section">
 				<div class="container">
 					<div class="nav-header">
-						<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle"><i></i></a>
+						<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle"
+                        ><i></i>
+                        </a>
                         <h1 id="fh5co-logo">
                             <a href="/">
-                                <img class="2xl:w-72 2xl:pt-4 xl:w-72 xl:pt-1.5 lg:w-64 lg:pt-1.5 md:w-60
-                                    md:pt-1.5 w-44 pt-2 opacity-90"
-                                         src="{% static 'logos/INTERVAL_logo_simple_green_2_lg.png' %}"
+                                <img class="2xl:w-72 xl:w-64 lg:w-64 md:w-60 w-44 opacity-90"
+                                         src="{% static 'logos/IntervalLogo__Graphic_Circle_White.png' %}"
                                          alt="INTERVAL logo" />
                             </a>
                         </h1>
@@ -69,19 +70,19 @@
 						</div>
 						<div class="partner animate-box">
 							<div class="inner">
-								<img class="img-responsive"
-                                     src="https://www.sfi.ie/site-files/cms-templates/img/sfi-logo.svg" alt="">
+								<img class="img-responsive" style="width:4000px; height:100px;"
+                                     src="https://zeeko.ie/wp-content/uploads/2023/01/SFI-Science-Foundation-Ireland-Logo.png" alt="">
 							</div>
 						</div>
 						<div class="partner animate-box">
 							<div class="inner">
-								<img class="img-responsive"
-                                     src="{% static 'logos/INTERVAL_logo_v2_white.png' %}" alt="">
+								<img class="img-responsive" style="width: 100%; height:100%"
+                                     src="{% static 'logos/IntervalLogo__Lockup_Colour.png' %}" alt="">
 							</div>
 						</div>
 						<div class="partner animate-box">
 							<div class="inner">
-								<img class="img-responsive" style="max-height: 5rem;"
+								<img class="img-responsive" style="width: 52%; height:100%"
                                      src="https://logodix.com/logo/771750.png" alt="">
 							</div>
 						</div>
