--- a/src/home/templates/pages/general/navbar.html
+++ b/src/home/templates/pages/general/navbar.html
@@ -1,8 +1,8 @@
 {% load static %}
 <header id="header" class="alt">
     <a href="/" class="logo">
-        <img class="2xl:pt-4 xl:pt-1.5 lg:pt-1.5 md:pt-1.5 w-44 pt-2 opacity-90"
-             src="{% static 'logos/INTERVAL_logo_simple_green_2_lg.png' %}"
+        <img class="2xl:w-72 xl:w-64 lg:w-20 md:w-20 opacity-90"
+             src="{% static 'logos/IntervalLogo__Graphic_Circle_White.png' %}"
              alt="INTERVAL logo" />
     </a>
     <nav>
