--- a/src/core/static/css/main-ui.css
+++ b/src/core/static/css/main-ui.css
@@ -1433,6 +1433,11 @@ input:checked + .toggle-bg {
   padding: 1rem;
 }
 
+.px-16 {
+  padding-left: 4rem;
+  padding-right: 4rem;
+}
+
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
@@ -1778,6 +1783,14 @@ input:checked + .toggle-bg {
     margin-top: 5rem;
   }
 
+  .md\:block {
+    display: block;
+  }
+
+  .md\:w-20 {
+    width: 5rem;
+  }
+
   .md\:w-60 {
     width: 15rem;
   }
@@ -1808,6 +1821,10 @@ input:checked + .toggle-bg {
     display: block;
   }
 
+  .lg\:w-20 {
+    width: 5rem;
+  }
+
   .lg\:w-64 {
     width: 16rem;
   }
@@ -1828,6 +1845,10 @@ input:checked + .toggle-bg {
 
   .xl\:mt-14 {
     margin-top: 3.5rem;
+  }
+
+  .xl\:w-64 {
+    width: 16rem;
   }
 
   .xl\:w-72 {
