--- a/src/home/static/template_glow/css/style.css
+++ b/src/home/static/template_glow/css/style.css
@@ -332,7 +332,6 @@ figure {
   z-index: 2;
   font-size: 22px;
   text-transform: uppercase;
-  margin-top: 35px;
   font-weight: 700;
   float: left;
 }
@@ -358,7 +357,7 @@ figure {
   z-index: 2;
   display: block;
   float: right;
-  margin-top: 15px;
+  margin-top: 40px;
 }
 #fh5co-menu-wrap .sf-menu a {
   padding: 1em 0.75em;
@@ -1662,7 +1661,7 @@ figure {
   width: 100%;
   height: 100%;
   z-index: 9999;
-  background: url(../images/hourglass.svg) center no-repeat #222222;
+  background: url(../images/work-1.jpg) center no-repeat #222222;
 }
 
 /*# sourceMappingURL=style.css.map */
