--- a/src/home/static/template_glow/sass/style.scss
+++ b/src/home/static/template_glow/sass/style.scss
@@ -429,7 +429,7 @@ figure {
 	z-index: 2;
 	font-size: 22px;
 	text-transform: uppercase;
-	margin-top: 35px;
+	// margin-top: 35px;
 	font-weight: 700;
 	float: left;
 	span{
@@ -456,7 +456,7 @@ figure {
 	z-index: 2;
 	display: block;
 	float: right;
-	margin-top: 15px;
+	margin-top: 40px;
 	.sf-menu a {
 		padding: 1em .75em;
 	}
@@ -1753,7 +1753,7 @@ figure {
 	width: 100%;
 	height: 100%;
 	z-index: 9999;
-	background: url(../images/hourglass.svg) center no-repeat #222222;
+	background: url(../images/work-1.jpg) center no-repeat #222222;
 }
 
 
