--- a/src/home/templates/home/landing_page.html
+++ b/src/home/templates/home/landing_page.html
@@ -102,9 +102,10 @@
                     <div class="contact-method">
                         <span class="icon solid alt fa-home"></span>
                         <h3>Address</h3>
-                        <span>Spatial Dynamics Lab,<br />
-                            UCD Richview Campus,<br />
-                            D04 V1W8, Belfield, Dublin</span>
+                          
+                        <span>UCD School of Geography,<br />
+                            Newman Building, UCD Belfield,<br />
+                            Dublin 4, D04 F6X4</span>
                     </div>
                 </section>
             </section>
