--- a/src/home/static/template_glow/css/style.css
+++ b/src/home/static/template_glow/css/style.css
@@ -148,11 +148,13 @@ figure {
 .fh5co-cover .desc h2 {
   color: #fff;
   line-height: 1.35;
-  padding-left: 10rem; /* 144px */
-  padding-right: 10rem; /* 144px */
-  font-size: 54px;
-  margin-top: -75px;
-  margin-bottom: 10px;
+  padding-left: 10rem;
+  padding-right: 10rem;
+  font-size: 44px;
+  max-width: 80%;
+  margin: 10px auto;
+  /* margin-top: -75px; */
+  /* margin-bottom: 10px; */
   font-weight: 300 !important;
 }
 .fh5co-cover .desc h2 strong {
@@ -161,6 +163,11 @@ figure {
 @media screen and (max-width: 768px) {
   .fh5co-cover .desc h2 {
     font-size: 32px;
+        width: 100%;
+        margin-left: 0px;
+        padding: 0px;
+        margin-top: 0px;
+        margin-bottom: 10px;
   }
 }
 .fh5co-cover .desc span {
@@ -319,12 +326,16 @@ figure {
   left: 0;
   width: 100%;
   z-index: 2;
+  width: 100%;
+  height: 100px;
+
 }
 
 .nav-header {
   position: relative;
   float: left;
   width: 100%;
+  height: 100%;
 }
 
 #fh5co-logo {
@@ -357,7 +368,7 @@ figure {
   z-index: 2;
   display: block;
   float: right;
-  margin-top: 40px;
+  margin-top: 20px;
 }
 #fh5co-menu-wrap .sf-menu a {
   padding: 1em 0.75em;
@@ -752,6 +763,9 @@ figure {
   width: 100%;
 }
 #fh5co-partner .wrap {
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
   position: absolute;
   top: 0;
   left: 0;
@@ -764,11 +778,12 @@ figure {
   box-shadow: 0px 9px 25px -8px rgba(0, 0, 0, 0.38);
 }
 #fh5co-partner .partner {
-  width: 20%;
-  float: left;
+  align-content: center;
+  /* width: 20%;
+  float: left; */
 }
 #fh5co-partner .partner .inner {
-  width: 50%;
+  width: 100px;
   margin: 0 auto;
 }
 
