--- a/src/home/templates/pages/general/navbar.html
+++ b/src/home/templates/pages/general/navbar.html
@@ -3,9 +3,11 @@
     <a href="/" class="logo">
         <img class="2xl:w-72 xl:w-64 lg:w-20 md:w-20 opacity-90"
              src="{% static 'logos/IntervalLogo__Graphic_Circle_White.png' %}"
-             alt="INTERVAL logo" />
+             alt="INTERVAL logo" 
+             style="width: 100%; height: 100%;"
+             />
     </a>
     <nav>
-        <a href="#menu">Menu</a>
+        <a href="#menu"></a>
     </nav>
 </header>
