--- a/src/blog/templates/blog/js.html
+++ b/src/blog/templates/blog/js.html
@@ -6,3 +6,22 @@
 <script src="{% static 'js/breakpoints.min.js' %}"></script>
 <script src="{% static 'js/util.js' %}"></script>
 <script src="{% static 'js/main.js' %}"></script>
+
+
+
+<script>
+    // JavaScript to handle the collapsible sections
+document.querySelectorAll(".collapsible-header").forEach((header) => {
+  header.addEventListener("click", () => {
+    const content = header.nextElementSibling;
+
+    // Toggle the visibility of the content
+    if (content.style.display === "block") {
+      content.style.display = "none";
+    } else {
+      content.style.display = "block";
+    }
+  });
+});
+
+</script>
